[package]
name = "bytes_reader"
version = "0.1.1"
edition = "2024"
authors = ["Emad Ali"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Mclilzee/bytes_reader"
homepage = "https://github.com/Mclilzee/bytes_reader"
keywords = ["bytes", "buffer", "cursor", "reader"]
description = """
Read bytes using a buffer and automatically tracked cursor
"""
rust-version = "1.92.0"

[dependencies]
anyhow = "1.0.100"
